# AWS-AGENTIC-ARCHITECTURES

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  main.py
api/middleware/: __init__.py  auth.py  logging.py
api/routers/: __init__.py  health.py  patterns.py
docs/: API_REFERENCE.md  ARCHITECTURE_COMPARISON.md  DEPLOYMENT.md  GETTING_STARTED.md  README.md
evaluation/: __init__.py
evaluation/benchmarks/: accuracy_tests.py  cost_analysis.py  performance_tests.py
evaluation/metrics/: efficiency.py  quality.py  reliability.py
evaluation/reports/: __init__.py  evaluation_dashboard.py  pattern_comparison.py
examples/: __init__.py
examples/demos/: __init__.py  cli_demo.py  streamlit_app.py
examples/notebooks/: __init__.py  custom_combinations.ipynb  getting_started.ipynb  pattern_comparison.ipynb
examples/use_cases/: __init__.py
examples/use_cases/code_generation/: README.md  __init__.py  agent.py
examples/use_cases/customer_support/: README.md  __init__.py  agent.py
examples/use_cases/research_assistant/: README.md  __init__.py  agent.py
examples/use_cases/trading_bot/: README.md  __init__.py  agent.py
infrastructure/: __init__.py
infrastructure/aws/cdk/: app.py
infrastructure/aws/cloudformation/: api-gateway.yaml  bedrock-setup.yaml  lambda-functions.yaml  neptune-graph.yaml
infrastructure/aws/terraform/: bedrock.tf  lambda.tf  main.tf  variables.tf
infrastructure/docker/api/: Dockerfile
infrastructure/docker/nginx/: nginx.conf
infrastructure/docker/worker/: Dockerfile
infrastructure/kubernetes/: ingress.yaml  namespace.yaml  service.yaml
monitoring/: __init__.py  alerts.py  logging_config.py  metrics.py
monitoring/dashboards/: __init__.py
patterns/01_reflection/: README.md  __init__.py  agent.py  config.py  example.py
patterns/01_reflection/tests/: __init__.py  test_agent.py  test_integration.py
patterns/02_tool_using/: README.md  __init__.py  agent.py  config.py  example.py
patterns/02_tool_using/tests/: __init__.py  test_agent.py  test_integration.py
patterns/02_tool_using/tools/: __init__.py  currency_tool.py  web_search_tool.py
patterns/03_react/: README.md  __init__.py  agent.py  config.py  example.py
patterns/03_react/tests/: __init__.py  test_agent.py  test_integration.py
patterns/04_planning/: README.md  __init__.py  agent.py  config.py  example.py
patterns/04_planning/tests/: __init__.py  test_agent.py  test_integration.py
patterns/05_pev/: README.md  __init__.py  agent.py  config.py  example.py
patterns/05_pev/tests/: __init__.py  test_agent.py  test_integration.py
patterns/06_tree_of_thoughts/: README.md  __init__.py  agent.py  config.py  example.py
patterns/06_tree_of_thoughts/tests/: __init__.py  test_agent.py  test_integration.py
patterns/07_multi_agent/: README.md  __init__.py  agent.py  config.py  example.py
patterns/07_multi_agent/tests/: __init__.py  test_agent.py  test_integration.py
patterns/08_meta_controller/: README.md  __init__.py  agent.py  config.py  example.py
patterns/09_blackboard/: README.md  __init__.py  agent.py  config.py  example.py
patterns/09_blackboard/tests/: test_agent.py  (+1 more)
patterns/10_ensemble/: README.md  __init__.py  agent.py  config.py  example.py
patterns/11_episodic_semantic_memory/: README.md  __init__.py  agent.py  config.py  example.py
patterns/12_graph_memory/: README.md  __init__.py  agent.py  config.py  example.py
patterns/13_self_improvement/: README.md  __init__.py  agent.py  config.py  example.py
patterns/14_dry_run_harness/: README.md  __init__.py  agent.py  config.py  example.py
patterns/15_simulator/: README.md  __init__.py  agent.py  config.py  example.py
patterns/16_reflexive_metacognitive/: README.md  __init__.py  agent.py  config.py  example.py
patterns/17_cellular_automata/: README.md  __init__.py  agent.py  config.py  example.py
patterns/base/: __init__.py  agent_base.py  bedrock_client.py  memory_base.py
scripts/: benchmark.sh  cleanup.sh  deploy.sh  setup.sh  test.sh
security/: __init__.py  access_control.py  audit_logger.py  encryption.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
utils/: __init__.py  config_loader.py  error_handlers.py  formatters.py  validators.py
(+18 files in other folders)
